gitops/apps/esl-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esl-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esl-web
  template:
    metadata:
      labels:
        app: esl-web
    spec:
      containers:
        - name: app
          image: nooblearn2code/ethnosoul-legacy-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
