gitops/apps/esl-web/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esl-web-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ethnosoul-legacy.vn`)
      kind: Rule
      services:
        - name: esl-web-svc
          port: 80
